@@ -1,16 +1,16 @@
 package com.octosign.whitelabel.communication.server;
 
-import com.google.common.collect.ImmutableMap;
-import com.octosign.whitelabel.communication.MimeType;
-import com.octosign.whitelabel.communication.server.format.BodyFormat;
-import com.octosign.whitelabel.error_handling.Code;
-import com.octosign.whitelabel.error_handling.IntegrationException;
-import com.sun.net.httpserver.HttpExchange;
-
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+
+import com.octosign.whitelabel.communication.MimeType;
+import com.octosign.whitelabel.communication.server.format.BodyFormat;
+import com.octosign.whitelabel.error_handling.Code;
+import com.octosign.whitelabel.error_handling.IntegrationException;
+import com.octosign.whitelabel.error_handling.MalformedMimetypeException;
+import com.sun.net.httpserver.HttpExchange;
 
 import static com.octosign.whitelabel.communication.server.format.StandardBodyFormats.JSON;
 
@@ -18,7 +18,7 @@ public class Request<T> {
 
     private final HttpExchange exchange;
 
-    private final Map<MimeType, BodyFormat> BODY_FORMATS = ImmutableMap.of(
+    private final Map<MimeType, BodyFormat> bodyFormats = Map.of(
         MimeType.JSON, JSON,
         MimeType.PLAIN, JSON, // Plain is considered JSON so clients can prevent CORS preflight
         MimeType.ANY, JSON // Implicit default format
@@ -38,17 +38,23 @@ public class Request<T> {
         }
     }
 
-    public T getBody() { return body; }
+    public HttpExchange getExchange() {
+        return exchange;
+    }
 
-    public HttpExchange getExchange() { return exchange; }
-
-    public BodyFormat getBodyFormat() { return bodyFormat; }
+    public BodyFormat getBodyFormat() {
+        return bodyFormat;
+    }
 
     /**
      * List of supported body MIME types
      */
     public List<MimeType> getSupportedBodyFormats() {
-        return new ArrayList<>(BODY_FORMATS.keySet());
+        return new ArrayList<>(bodyFormats.keySet());
+    }
+
+    public T getBody() {
+        return body;
     }
 
     /**
@@ -59,28 +65,35 @@ public class Request<T> {
      * @param bodyClass Class of the expected object in the body
      */
     public T processBody(Class<T> bodyClass) {
+        var stream = exchange.getRequestBody();
+
         try {
             // TODO: Get charset from the Content-Type header - don't assume it's UTF-8
-            var bodyString = new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8);
+            var bodyString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
             body = bodyFormat.from(bodyString, bodyClass);
             return body;
         } catch (Exception e) {
-            throw new IntegrationException(Code.MALFORMED_BODY, e);
+            throw new IntegrationException(Code.MALFORMED_INPUT, e);
         }
     }
 
     public <U extends Map<String, List<String>>> BodyFormat extractBodyFormat(U source) {
         var contentType = source.get("Content-Type");
-        var defaultBodyFormat = BODY_FORMATS.get(MimeType.ANY);
+        var defaultBodyFormat = bodyFormats.get(MimeType.ANY);
         if (contentType == null)
             return defaultBodyFormat;
 
-        var contentMimeType = MimeType.parse(contentType.get(0));
+        MimeType contentMimeType;
+        try {
+            contentMimeType = MimeType.parse(contentType.get(0));
+        } catch (MalformedMimetypeException e) {
+            throw new IntegrationException(Code.MALFORMED_MIMETYPE, e);
+        }
 
-        return BODY_FORMATS.keySet().stream()
+        return bodyFormats.keySet().stream()
                 .filter(m -> m.equalsTypeSubtype(contentMimeType))
                 .findFirst()
-                .map(BODY_FORMATS::get)
+                .map(bodyFormats::get)
                 .orElse(defaultBodyFormat);
     }
 }
