@@ -1,16 +1,18 @@
 package com.octosign.whitelabel.communication.server;
 
-import com.google.common.collect.ImmutableMap;
-import com.octosign.whitelabel.communication.MimeType;
-import com.octosign.whitelabel.communication.server.format.BodyFormat;
-import com.sun.net.httpserver.HttpExchange;
-
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+
+import com.octosign.whitelabel.communication.MimeType;
+import com.octosign.whitelabel.communication.server.format.BodyFormat;
+import com.octosign.whitelabel.error_handling.Code;
+import com.octosign.whitelabel.error_handling.IntegrationException;
+import com.octosign.whitelabel.error_handling.MalformedMimetypeException;
+import com.sun.net.httpserver.HttpExchange;
 
 import static com.octosign.whitelabel.communication.server.format.StandardBodyFormats.JSON;
 
@@ -21,7 +23,7 @@ public class Response<U> {
 
     private final HttpExchange exchange;
 
-    private final Map<MimeType, BodyFormat> BODY_FORMATS = ImmutableMap.of(
+    private final Map<MimeType, BodyFormat> bodyFormats = Map.of(
         MimeType.JSON_UTF8, JSON,
         MimeType.ANY, JSON // Default format
     );
@@ -39,36 +41,53 @@ public class Response<U> {
 
         if (accept != null) {
             // TODO: Consider all mime types
-            var contentMimeType = Arrays.stream(accept.get(0).split(","))
-                .map(MimeType::parse)
+            var contentMimeType = Arrays.asList(accept.get(0).split(",")).stream()
+                .map(raw -> {
+                    try {
+                        return MimeType.parse(raw);
+                    } catch (MalformedMimetypeException e) {
+                        throw new IntegrationException(Code.MALFORMED_MIMETYPE, e);
+                    }
+                })
                 .findFirst()
                 .orElseThrow(IllegalArgumentException::new);
 
             // TODO very similar method in Request - lets merge them
-            bodyFormat = BODY_FORMATS.keySet().stream()
+            bodyFormat = bodyFormats.keySet().stream()
                 .filter(m -> m.equalsTypeSubtype(contentMimeType))
                 .findFirst()
-                .map(BODY_FORMATS::get)
-                .orElse(BODY_FORMATS.get(MimeType.ANY));
+                .map(bodyFormats::get)
+                .orElse(bodyFormats.get(MimeType.ANY));
         } else {
-            bodyFormat = BODY_FORMATS.get(MimeType.ANY);
+            bodyFormat = bodyFormats.get(MimeType.ANY);
         }
     }
 
     // TODO modify this to fit the above, then extract it and make equal with the almost identical method in Request class
-    public <U extends Map<String, List<String>>> BodyFormat extractBodyFormat(U source) {
+    public <W extends Map<String, List<String>>> BodyFormat extractBodyFormat(W source) {
         var contentType = source.get("Accept");
-        var defaultBodyFormat = BODY_FORMATS.get(MimeType.ANY);
+        var defaultBodyFormat = bodyFormats.get(MimeType.ANY);
         if (contentType == null)
             return defaultBodyFormat;
 
-        var contentMimeType = MimeType.parse(contentType.get(0));
+        MimeType contentMimeType;
+        try {
+            contentMimeType = MimeType.parse(contentType.get(0));
+        } catch (MalformedMimetypeException e) {
+            throw new IntegrationException(Code.MALFORMED_MIMETYPE, e);
+        }
 
-        return BODY_FORMATS.keySet().stream()
+        return bodyFormats.keySet().stream()
                 .filter(m -> m.equalsTypeSubtype(contentMimeType))
                 .findFirst()
-                .map(BODY_FORMATS::get)
+                .map(bodyFormats::get)
                 .orElse(defaultBodyFormat);
+    }
+
+    public Response<U> asError(int httpCode, U error) {
+        setStatusCode(httpCode);
+        setBody(error);
+        return this;
     }
 
     public int getStatusCode() {
@@ -89,19 +108,21 @@ public class Response<U> {
         return this;
     }
 
-    public void send() throws IOException {
+    public void send() {
         var headers = exchange.getResponseHeaders();
         var body = bodyFormat.to(getBody());
-
         // TODO: Check Accept header instead of hardcoding UTF-8
         var bodyBytes = body.getBytes(StandardCharsets.UTF_8);
+
         headers.set("Content-Type", bodyFormat.getMimeType().toString());
-        exchange.sendResponseHeaders(statusCode, bodyBytes.length);
 
         // automatically closes stream
         try (var stream = exchange.getResponseBody()) {
             exchange.sendResponseHeaders(statusCode, bodyBytes.length);
             stream.write(bodyBytes);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to send response");
         }
     }
+
 }
